{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 39,
  "lineage": "1f1589a9-8145-0fed-095e-a36fce4b89c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c6886725ddb3dca",
            "association_id": "eipassoc-08cc8d05a4a54d9bf",
            "domain": "vpc",
            "id": "eipalloc-06c6886725ddb3dca",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0675342756f1b747b",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-225-233-40.compute-1.amazonaws.com",
            "public_ip": "34.225.233.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson3"
            },
            "tags_all": {
              "Name": "lesson3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045602374a1982480",
            "arn": "arn:aws:ec2:us-east-1:992382414095:instance/i-0a5c13ea638d09314",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5c13ea638d09314",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c6ee4256b295117",
            "private_dns": "ip-10-0-2-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b077ac1347c83d47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f8f37c25078f664",
            "tags": {
              "Name": "var.name"
            },
            "tags_all": {
              "Name": "var.name"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ac183fbd1d86682"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet2",
            "aws_vpc.my_vpc1",
            "data.aws_ami.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06883a492f195064e",
            "arn": "arn:aws:ec2:us-west-2:992382414095:instance/i-023cdd8a4568e8c4a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023cdd8a4568e8c4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2ae2a30c61a958a",
            "private_dns": "ip-172-31-19-130.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.130",
            "public_dns": "ec2-35-90-7-16.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.7.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f30075061df99223",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fb69f930b99adc4",
            "tags": {
              "Name": "var.name"
            },
            "tags_all": {
              "Name": "var.name"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a63014dff102fe61"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_oregon",
            "aws_vpc.my_vpc2",
            "data.aws_ami.ami_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382414095:internet-gateway/igw-05fa1092072eacd76",
            "id": "igw-05fa1092072eacd76",
            "owner_id": "992382414095",
            "vpc_id": "vpc-00726ee8acd098c46"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c6886725ddb3dca",
            "association_id": "eipassoc-08cc8d05a4a54d9bf",
            "connectivity_type": "public",
            "id": "nat-077088c57e6f6414b",
            "network_interface_id": "eni-0675342756f1b747b",
            "private_ip": "10.0.1.50",
            "public_ip": "34.225.233.40",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-006061d597beb43ab",
            "tags": {
              "Name": "lesson3"
            },
            "tags_all": {
              "Name": "lesson3"
            }
          },
          "dependencies": [
            "aws_eip.eipp",
            "aws_internet_gateway.igw",
            "aws_subnet.subnet1",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382414095:route-table/rtb-002c84be3f14a2ea6",
            "id": "rtb-002c84be3f14a2ea6",
            "owner_id": "992382414095",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-077088c57e6f6414b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "var.name"
            },
            "tags_all": {
              "Name": "var.name"
            },
            "timeouts": null,
            "vpc_id": "vpc-00726ee8acd098c46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eipp",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.subnet1",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382414095:route-table/rtb-0b0ef92c8bc57c259",
            "id": "rtb-0b0ef92c8bc57c259",
            "owner_id": "992382414095",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fa1092072eacd76",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "var.name"
            },
            "tags_all": {
              "Name": "var.name"
            },
            "timeouts": null,
            "vpc_id": "vpc-00726ee8acd098c46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b9f69514b5a0bc7",
            "route_table_id": "rtb-002c84be3f14a2ea6",
            "subnet_id": "subnet-03f8f37c25078f664"
          },
          "dependencies": [
            "aws_eip.eipp",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca39c65eb5f46d75",
            "route_table_id": "rtb-0b0ef92c8bc57c259",
            "subnet_id": "subnet-006061d597beb43ab"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnet1",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382414095:security-group/sg-0c3ae77014f8c2439",
            "description": "Allow HTTP, HTTPS, SSH",
            "egress": [],
            "id": "sg-0c3ae77014f8c2439",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pub_sg",
            "name_prefix": "",
            "owner_id": "992382414095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub_sg"
            },
            "tags_all": {
              "Name": "pub_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00726ee8acd098c46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382414095:subnet/subnet-006061d597beb43ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006061d597beb43ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382414095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-00726ee8acd098c46"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382414095:subnet/subnet-03f8f37c25078f664",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f8f37c25078f664",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382414095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-00726ee8acd098c46"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382414095:subnet/subnet-089cd7c33ae587ae7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089cd7c33ae587ae7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382414095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson3"
            },
            "tags_all": {
              "Name": "lesson3"
            },
            "vpc_id": "vpc-07b6bd96f40d80e1c"
          },
          "dependencies": [
            "aws_vpc.my_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382414095:vpc/vpc-00726ee8acd098c46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074961f7d16d99b70",
            "default_route_table_id": "rtb-0dee9925f1d3522f8",
            "default_security_group_id": "sg-01ac183fbd1d86682",
            "dhcp_options_id": "dopt-05544ae36bd92361f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00726ee8acd098c46",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dee9925f1d3522f8",
            "owner_id": "992382414095",
            "tags": {
              "Name": "lesson3"
            },
            "tags_all": {
              "Name": "lesson3"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382414095:vpc/vpc-07b6bd96f40d80e1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-011a1ff591dafb0eb",
            "default_route_table_id": "rtb-0a3c502c84cb4d8d7",
            "default_security_group_id": "sg-00030bcc1e64c47bc",
            "dhcp_options_id": "dopt-01d548c8558691e52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b6bd96f40d80e1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3c502c84cb4d8d7",
            "owner_id": "992382414095",
            "tags": {
              "Name": "lesson3"
            },
            "tags_all": {
              "Name": "lesson3"
            }
          }
        }
      ]
    }
  ]
}